--- a/autocomplete.css
+++ b/autocomplete.css
@@ -1,25 +1,16 @@
 * { box-sizing: border-box; }
-body {
-  font: 16px Arial;
-}
+
 .autocomplete {
   /*the container must be positioned relative:*/
   position: relative;
+  margin: 10px;
 }
-input {
-  border: 1px solid transparent;
-  background-color: #f1f1f1;
-  padding: 10px;
-  font-size: 16px;
-}
-input[type=text] {
-  background-color: #f1f1f1;
-  width: 100%;
-}
+
 input[type=submit] {
   background-color: DodgerBlue;
   color: #fff;
 }
+
 .autocomplete-items {
   position: absolute;
   border: 1px solid #d4d4d4;
